# routers/view.js
@@ -20,28 +20,30 @@ router.get('/album/:albumId', async (req, res) => {
     return res.status(400).end()
   }
   // pagination
+  const details = req.query.details || 'default'
   const albumOpt = {
-    details: req.query.details,
+    details: details,
     includeId: true,
     sort: req.query.sort || 'name:1',
     skip: parseInt(Number(req.query.skip || 0)),
     limit: Math.min(parseInt(Number(req.query.limit || 0)) || 200, 200)
   }
   const photoOpt = {
-    details: req.query.details,
+    details: details,
     includeId: true,
     sort: req.query.sort || 'created:1',
     skip: parseInt(Number(req.query.skip || 0)),
     limit: Math.min(parseInt(Number(req.query.limit || 0)) || 120, 120)
   }
   const userOpt = {
-    details: req.query.details,
+    details: details,
     includeId: true,
     sort: req.query.sort || 'userName:1',
     skip: parseInt(Number(req.query.skip || 0)),
     limit: Math.min(parseInt(Number(req.query.limit || 0)) || 200, 200)
   }
   // details
+  const album = await albumDB.getItems({ id: req.params.albumId }, { details: 'all', includeId: true }, { one: true })
   const albumItems = await albumDB.getItems({ albumId: req.params.albumId }, albumOpt, { one: false })
   const photoItems = await photoDB.getItems({ albumId: req.params.albumId }, photoOpt, { one: false })
   // users
@@ -50,8 +52,13 @@ router.get('/album/:albumId', async (req, res) => {
   photoItems.forEach(item => item.userId ? userIdSet.add(item.userId) : null)
   const userIds = Array.from(userIdSet.values())
   const userItems = await userDB.getItems({ id: { $in: userIds } }, userOpt, { one: false })
+  // size
+  const pathPrefix = await albumDB.findOne(req.params.albumId, Photo.projections.path({ includeId: false }))
+  const albumSize = pathPrefix ? (await photoDB.getPathPrefixSize(pathPrefix.path)) : null
   // ret
   return res.status(200).json({
+    album,
+    albumSize,
     albums: {
       count: await albumDB.countChildItems(req.params.albumId),
       params: albumOpt,
